test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void_expression.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CSizeOf: 
                  CCast: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    Void: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
